--- a/stridle/src/main/res/layout/activity_main.xml
+++ b/stridle/src/main/res/layout/activity_main.xml
@@ -7,7 +7,16 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="rellikolbaid.stridle.MainActivity">
+    tools:context="rellikolbaid.stridle.MainActivity"
+    android:focusableInTouchMode="true">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/shoes"
+        android:scaleType="centerCrop"
+        android:id="@+id/imageView"
+        android:layout_gravity="center" />
 
     <TextView
         android:layout_width="wrap_content"
