shitty premade settings page added, need to adjust to suit our needs.

--- a/stridle/src/main/res/layout/activity_main.xml
+++ b/stridle/src/main/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
         android:id="@+id/settingsButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="openSettings" />
 
     <Button
         android:layout_width="wrap_content"
