Stats reset button added

--- a/stridle/src/main/res/layout/activity_stats.xml
+++ b/stridle/src/main/res/layout/activity_stats.xml
@@ -9,4 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rellikolbaid.stridle.StatsActivity">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset Stats"
+        android:id="@+id/resetStatsButton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:onClick="resetStats"/>
 </RelativeLayout>
