--- a/stridle/src/main/res/layout/activity_main.xml
+++ b/stridle/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="68sp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
