--- a/stridle/src/main/res/layout/activity_stats.xml
+++ b/stridle/src/main/res/layout/activity_stats.xml
@@ -30,36 +30,21 @@
             android:layout_height="wrap_content"
             android:id="@+id/points"
             android:textSize="36sp"
-            android:textAlignment="center"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/lifetimeSteps"
             android:textSize="36sp"
-            android:textAlignment="center"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/sessionSteps"
             android:textSize="36sp"
-            android:textAlignment="center"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:textAlignment="center" />
     </LinearLayout>
 
 </RelativeLayout>
