Exp bar added with level display. Also mom's spaghetti

--- a/stridle/src/main/res/layout/activity_main.xml
+++ b/stridle/src/main/res/layout/activity_main.xml
@@ -56,4 +56,21 @@
         android:layout_alignParentEnd="true"
         android:onClick="openStatsActivity"/>
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:id="@+id/expBar"
+        android:layout_above="@+id/settingsButton"
+        android:layout_alignParentTop="@+id/upgradesButton" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/levelView"
+        android:layout_above="@+id/expBar"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
